2002-08-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-info.c (yelp_info_read_info_dir): 
	- support info files that is named name.gz. Fixes #85324.
	- Remove duplicates.

	* src/yelp-window.c:
	(window_init): don't automatically go to uri "toc:" in history. 
	(yelp_window_new): don't open "toc:", this is now done from
	  yelp_base_new_window 
	(yelp_window_open_uri): goto the uri in history, Fixes #86538.

	* src/yelp-base.c:
	(impl_Yelp_newWindow): don't show window and open_uri here. Do it in
	  yelp_base_new_window instead.
	(yelp_base_new_window): added a uri argument. If it's passed it's
	  opened, otherwise "toc:" is opened.

2002-08-04  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 

	* src/yelp-man.c: added function which removes multiple 
 	man pathes, fixes bug#75728
 
2002-08-02  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl:
	- make list items have some space around them
	- make sublists have more consistent spacing
	- change list styles inside sublists

2002-08-01  Szabolcs Ban  <shooby@gnome.hu>

	* configure.in: Added "hu" to ALL_LINGUAS. Finally :)

2002-07-15  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_start): Print with %% instead of % to
	  printf, I'm stupid :) Fixes 87972, thanks
	  mathew@fugue.jpl.nasa.gov for finding this.

2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>

	* yelp/configure.in
	* yelp/src/Makefile.am
	* yelp/src/yelp-reader.c
	Now support libgnome installing gnome2-man2html and gnome2-info2html
	to libexec.

2002-07-09  Mark McLoughlin  <mark@skynet.ie>

	* yelp.desktop.in: use X-GNOME-DocPath instead of DocPath.

2002-07-08  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-info.c:
	(yelp_info_read_info_dir): Removed possibility of buffer overflow
	  by using g_strdup_printf instead of strcpy. Fixes #87127. Thanks
	  to Laavanya K R for finding and proposing a solution.

2002-07-07  Glynn Foster  <glynn.foster@sun.com>
